<resources>
    <string name="app_name">Cru Mail</string>
    <string name="code_logo">code_Logo</string>
    <string name="username">Username</string>
    <string name="password">...............</string>
    <string name="Login">SIGN IN</string>
    <string name="Sign_up">REGISTER</string>
    <string name="remember">Remember me</string>
    <string name="forgot">Forgot Password?</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="forgotPassText">A link to reset your password will be sent to your E-mail. But, if you don\'t take the link. Your password would still be the old password. </string>
    <string name="passFor">FORGOT</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email_address">Email Address</string>
    <string name="reset">RESET MY PASSWORD</string>
    <string name="back_to_sign_in">BACK TO SIGN IN</string>
    <string name="sign_up_with_e_mail">Sign up with E-mail</string>
    <string name="first_name">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password2">Password</string>
    <string name="user_name">User Name</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="submit">Submit</string>
    <string-array name="kevo">
        <item>samuel</item>
    </string-array>
</resources>
