<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="com.example.kingoj.login_screen.ForGotPasswordActivity"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:background="@color/colorBlack"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/forgot"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="90dp"
            android:text="@string/forgot_password"
            android:textAlignment="center"
            android:textColor="@color/colorText1"
            android:textSize="28sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:id="@+id/forgotText"
            android:layout_width="wrap_content"
            android:layout_height="123dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/forgotPassText"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="monospace" />

        <EditText
            android:id="@+id/emailPASSFOR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_email_black"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email_black"
            android:ems="10"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorText1"
            android:textColorHint="@color/colorText1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/round_corner_pink" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/round_corner_pink"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/reset"
            android:padding="10dp"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/round_corner_pink"
            android:clickable="true"
            android:focusable="true"
            android:hint="@string/back_to_sign_in"
            android:padding="10dp"
            android:textColorHint="@color/colorWhite"
            android:textSize="16sp"
            android:id="@+id/backsignin"
            android:onClick="mainActivity"
            />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
