<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorReg"
    tools:context="com.example.kingoj.login_screen.SignUpActivity"
    tools:layout_editor_absoluteY="25dp">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/SignUpView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:text="@string/sign_up_with_e_mail"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="24sp"
                android:textStyle="bold" />

           <!-- <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_outline"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person_outline"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_outline"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_person_outline"
                android:hint="@string/lastName"
                android:inputType="textPersonName"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite" /> -->

            <EditText
                android:id="@+id/emailView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_email_reg"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_email_reg"
                android:ems="10"
                android:hint="@string/e_mail_address"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/colorWhite"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_portrait"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_portrait"
                android:ems="10"
                android:hint="@string/user_name"
                android:inputType="number"
                android:textColorHint="@color/colorWhite"
                android:textSize="20sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="25dp"
                android:background="@color/colorWhite" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_action_lock"
                android:drawablePadding="10dp"
                android:drawableStart="@drawable/ic_action_lock"
                android:ems="10"
                android:hint="@string/password2"
                android:inputType="textPassword"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textSize="20sp" />

            <view
                android:layout_width="match_parent"
                android:layout_height="0.3dp"
                android:layout_marginBottom="30dp"
                android:background="@color/colorWhite" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgound_gradient2"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/submit"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
